--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <title></title>
 
-    <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.json">
 
     <!-- un-comment this code to enable service worker
     <script>
@@ -21,25 +21,55 @@
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+  -->
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <!-- ionic/angularjs js -->
+  <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+  <!-- cordova script (this will be a 404 during development) -->
+  <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+  <!-- your app's js -->
+  <script src="js/app.js"></script>
+</head>
+<body ng-app="starter">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+  <ion-pane ng-controller="SlideCtrl">
+
+
+
+    <div class="bar bar-header has-tabs-top bar-dark">
+
+      <div class="h1 title">Striped + Slidebox</div>
+    </div>
+
+
+    <div class="tabs-striped tabs-top tabs-background-dark tabs-color-light">
+      <div class="tabs">
+      <button class="tab-item button-clear custom-tab ng-class:{'active': tab1}" ng-click='changeSlideOnClick("home-slide-box",0)'>
+          Tab1
+        </button>
+        <button class="tab-item button-clear custom-tab ng-class:{'active': tab2}" ng-click='changeSlideOnClick("home-slide-box",1)' >
+          Tab2
+        </button>
+        <button class="tab-item button-clear custom-tab ng-class:{'active': tab3}" ng-click='changeSlideOnClick("home-slide-box",2)' >
+          Tab3
+        </button>
+      </div>
+    </div>
+    <ion-content >
+
+      <ion-slide-box delegate-handle='home-slide-box' show-pager="false" on-slide-changed="changeActive(index)" style="padding-top: 88px;height:700px;">
+        <ion-slide style="background-color: red">
+        </ion-slide>
+
+        <ion-slide style="background-color: yellow">
+        </ion-slide>
+
+        <ion-slide style="background-color: blue">
+        </ion-slide>
+      </ion-slide-box>
+    </ion-content>
+  </ion-pane>
+</body>
 </html>
